--- a/frontend/app-frontend/package.json
+++ b/frontend/app-frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "recharts": "^1.8.5",
