--- a/frontend/app-frontend/package.json
+++ b/frontend/app-frontend/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
     "chart.js": "^2.9.4",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
